@@ -76,6 +76,3 @@ importFrom(rlist,list.cbind)
 importFrom(stringi,stri_replace_first_regex)
 importFrom(stringr,str_detect)
 useDynLib(GreedyExperimentalDesign)
-export(generate_block_design_cpp)
-export(compute_distance_matrix_cpp)
-export(shuffle_cpp)
