@@ -49,7 +49,7 @@ initBinaryMatchFollowedByRerandomizationDesignSearch = function(X, compute_dist_
 #' 
 #' @author Adam Kapelner
 #' @export
-resultsBinaryMatchThenRerandomizationSearch = function(obj, num_vectors = NULL, compute_obj_vals = FALSE, form = "zero_one"){
+resultsBinaryMatchThenRerandomizationSearch = function(obj, num_vectors = NULL, compute_obj_vals = FALSE, form = "one_zero"){
 	assertClass(obj, "binary_then_rerandomization_experimental_design")
 	assertCount(num_vectors, positive = TRUE, null.ok = TRUE)
 	if (is.null(num_vectors)){
@@ -61,9 +61,9 @@ resultsBinaryMatchThenRerandomizationSearch = function(obj, num_vectors = NULL, 
 		num_vectors = num_vectors_completed
 	}
 	assertLogical(compute_obj_vals)
-	assertChoice(form, c("zero_one", "pos_one_min_one"))
+	assertChoice(form, c("one_zero", "pos_one_min_one"))
 	
-	rerand_res = resultsRerandomizationSearch(obj$rerandomization_design, include_assignments = TRUE, "zero_one")
+	rerand_res = resultsRerandomizationSearch(obj$rerandomization_design, include_assignments = TRUE, "one_zero")
 	#the allocation vectors returned here have entries = 1 if the pair is left unswitched and = 0 if we should switch the pair
 	
 	indicTs = matrix(NA, nrow = num_vectors, ncol = obj$n)
@@ -74,8 +74,8 @@ resultsBinaryMatchThenRerandomizationSearch = function(obj, num_vectors = NULL, 
 		w_diff = rerand_res$ending_indicTs[r, ]
 		
 		#split the pair matrix based on the greedy vector
-		pair_matrix_T_is_first = pair_matrix_copy[w_diff == 1, ] #"zero_one" form was forced above
-		pair_matrix_C_is_first = pair_matrix_copy[w_diff == 0, ] #"zero_one" form was forced above
+		pair_matrix_T_is_first = pair_matrix_copy[w_diff == 1, ] #"one_zero" form was forced above
+		pair_matrix_C_is_first = pair_matrix_copy[w_diff == 0, ] #"one_zero" form was forced above
 		#now set all the entries as T if T is first and it's in the first column and 0 if second column
 		indicTs[r, pair_matrix_T_is_first[, 1]] = 1
 		indicTs[r, pair_matrix_T_is_first[, 2]] = 0
